--- a/css/style.css
+++ b/css/style.css
@@ -8,39 +8,32 @@ table, header, footer, section, aside, nav, article { display: block;}
 /*    padding: 12px;*/
 
 /*}*/
-#container {
-    width: 1200px;
-    margin-bottom: 10px;
-    margin:0 auto;
-    background-color: lightgray;
-    color-adjust: inherit ;
 
-}
 
 
 
 header {
-    margin-left: 100px;
-    margin-right: 100px;
-    margin-top: 100px;
-    height: 200px;
-    padding-top: 100px;
+
+
+    height: 370px;
+    width: 100%;
+    padding-top: 220px;
+    margin-bottom: 10px;
     text-align: center;
-    text-effect: emboss;
-    background: lightgray;
-    background-image: url("IMG/fantasy.jpg");
-    font-size:60px; font-weight: bold;
+    background: transparent;
+    background-blend-mode: normal;
+    background-image: url("IMG/Toppicture-Wood.png");
+    background-repeat: no-repeat;
 
-}
 
-.Kampfprotokoll {
-    background: none;
-    height: 350px;
-    overflow-y: auto;
-    width: 700px;
-    padding: 10px;
-    margin: 50px;
+    background-size: cover;
+    background-position-x: 0px;
+    background-position-y: -500px;
 
+    font-size:60px;
+    font-weight: bold;
+    position:relative;
+    color: khaki;
 
 
 }
@@ -49,74 +42,77 @@ header p{
     font-size:11px;
 
 }
-header img{ padding: 50px 50px 10px; width:50%; height: 300px;}
 
+
+.Kampfprotokoll {
+    background: none;
+    height: 350px;
+    overflow-y: auto;
+    width: 700px;
+    padding: 10px;
+    margin: 50px;
+}
+.fertigkeitenstart {
+    background: none;
+    height: 350px;
+    overflow-y: auto;
+    width: 700px;
+    padding: 10px;
+    margin: 50px;
+}
 
 nav {
-
-  /* MARGIN LEFT DEFAULT 100px!!*/  margin-left: 100px;
-    margin-right: auto;
-    background-color: #a42e2e;
+    margin-left: -50px;
+    margin-top: -150px;
+    background-color: transparent;
     float: left;
-    width: 300px;
-    height: 1070px;
-
+    width: 333px;
+    height: 1670px;
+    background-repeat: no-repeat;
     text-align: center;
-    font-size: 100%;
+    font-size:40px;
+    margin-right: 25px;
+    padding-left: 240px;
+    padding-right: 60px;
+    background-image: url("IMG/antique-scroll.png");
+    -moz-border-radius: 10px;
 
+    border-radius: 10px;
+    min-height: 500px;
+    background-size: 78% 97%;
+    background-position-x: 150px;
+    background-position-y: -50px;
+    position: relative;
 
-    position: inherit;
-
-    -moz-border-radius:10px; /* Firefox */
-    -webkit-border-radius:10px; /* Safari, Chrome */
-    -khtml-border-radius:10px; /* Konqueror */
-    border-radius:10px;
-    min-height:500px;
 
 }
 
 nav img{ padding: 50px 50px 10px; width:50%; height: 300px;}
+
+
 article {
 
+    background-color: transparent;
 
 
+    margin-left: 400px;
+    padding-left: 200px;
 
+    margin-top: -100px;
+    width: 70%;
+    height: 1400px;
 
-    background-color: khaki;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0;
-
-
-    width: 80%;
-    height: 1070px;
-    background-image: url("IMG/karte.jpg");
-    position: inherit;
+    background-image: url("IMG/Midpaper.png");
     font-family: Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif;
-    font-size:22px;"
-}
-article img{ padding: 50px 50px 10px; width:50%; height: 300px;}
-aside {
-
-    background-color:  #0D730B;
-    float: right;
-    width: 300px;
-    height: 1070px;
-    margin-right: 100px;
-    margin-left: auto;
-    padding: 0px;
-    text-align: center;
-    -moz-border-radius:10px; /* Firefox */
-    -webkit-border-radius:10px; /* Safari, Chrome */
-    -khtml-border-radius:10px; /* Konqueror */
-    border-radius:10px;
-    min-height:500px;
-
-
-    min-height:500px;
-
+    background-size: 100% 100%;
+    font-size:22px;
+    position: inherit;
+    background-repeat:  no-repeat;
 
 }
+
+
+
 body {
     background-color: lightgray;
     font-size: 30px;
@@ -127,16 +123,45 @@ body {
     width: 100%;
     /*background-image: url("IMG/background.jpg");*/
     font-family: Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif;
+    background-image: url("IMG/BackgroundGreenxcf.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
-
 body img{ padding: 50px 50px 10px; width:50%; height: 300px;}
-footer {
-    padding:20px;
-    border-top:5px solid #ccc;
-    background-color: white;
-    width: 100%;
-    height: 100px;
-    margin-right: 100px;
 
+footer {
+
+    padding:96px;
+
+    background-color: black;
+    height: 25px;
+    width: 80%;
+    position: inherit;
+    margin-left: 180px;
+}
+
+aside
+{
+    background-color: transparent;
+    float: right;
+    padding-top: 190px  ;
+    margin-top: -150px;
+    margin-right: -120px;
+    width: 900px;
+    height: 1450px;
+    background-position-x: 0px;
+    background-position-y: -20px;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    text-align: center;
+    border-radius:10px;
+    background-image: url("IMG/scroll right.png");
+    position: relative;
+    z-index: 8;
+}
+
+.responsive {
+    width: 100%;
+    height: auto;
 }
